[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "pywinctl"

[project.urls]
Homepage = "https://github.com/Kalmat/PyWinCtl"
Repository = "https://github.com/Kalmat/PyWinCtl.git"
Issues = "https://github.com/Kalmat/PyWinCtl/issues"
Changelog = "https://github.com/Kalmat/PyWinCtl/blob/HEAD/CHANGES.txt"
Documentation = "https://pywinctl.readthedocs.io/"

[project]
name = "PyWinCtl"
dynamic = ["version"]
description = "Cross-Platform toolkit to get info on and control windows on screen"
authors = [
    { name = "Kalmat", email = "palookjones@gmail.com" }
]
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE.txt"]
requires-python = ">=3.9"
keywords = [
    "activate",
    "close",
    "control",
    "geometry",
    "gui",
    "hide",
    "lower",
    "maximize",
    "menu",
    "minimize",
    "mouse-position",
    "move",
    "name",
    "position",
    "raise",
    "resize",
    "restore",
    "screen-size",
    "show",
    "size",
    "title",
    "window",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "ewmhlib>=0.2; sys_platform == 'linux'",
    "pymonctl>=0.92",
    "pyobjc>=8.1; sys_platform == 'darwin'",
    "python-xlib>=0.21; sys_platform == 'linux'",
    "pywin32>=302; sys_platform == 'win32'",
    "pywinbox>=0.7",
    "typing_extensions>=4.4.0",
]

[dependency-groups]
docs = [
    "myst-parser",
]
dev = [
    { include-group = "docs" },
    "ewmhlib",
    "mypy>=0.990,<2",
    "ruff>=0.15.16",
    "types-python-xlib>=0.32",
    "types-pywin32>=305.0.0.3",
]

[tool.uv]
exclude-newer = "1 week"
[tool.uv.exclude-newer-package]
# Kalmat owns these packages
ewmhlib = false
pymonctl = false
pywinbox = false
