[metadata]
description_file = README.md

[mypy]
mypy_path = src/
show_error_codes = True
strict = False
# Will be the default in mypy 0.990
namespace_packages = True
disable_error_code =
  # Currently using non-strict typing
  var-annotated,
  # https://github.com/python/mypy/issues/6232
  union-attr, attr-defined, assignment
