[metadata]
description_file = README.md

[mypy]
python_version = 3.7
mypy_path = src/, typings/
strict = True

# Leverage type inference for function return type
disallow_untyped_calls=False
disallow_incomplete_defs=False
disallow_untyped_defs=False

# https://github.com/python/mypy/issues/8234 (post assert "type: ignore")
# https://github.com/python/mypy/issues/8823 (version specific "type: ignore")
warn_unused_ignores = False

disable_error_code =
  # https://github.com/python/mypy/issues/6232 (redifinition with correct type)
  attr-defined, assignment,
  # https://github.com/python/mypy/issues/13975 (@property mistaken as Callable)
  comparison-overlap, truthy-function
